--- a/views/tasks/index.pug
+++ b/views/tasks/index.pug
@@ -1,3 +1,28 @@
 extends ../shared/template
 block content
   h1 Todo List Index
+
+  table.table.table-striped
+    thead
+      tr
+        th id
+        th name
+        th due
+        th Priority
+        th Category
+        th Complete?
+        th Created on
+    tbody
+      each task in viewTasks
+        tr(style='background-color:' + task.priority.color)
+          td= task._id
+          td= task.name
+          td= task.due
+          td= task.priority.name
+          td= task.category
+          td
+            if task.isComplete
+              i.fa.fa-check-square-o.fa-fw
+            else
+              i.fa.fa-square-o.fa-fw
+          td= task.createdAt
